# cleany-cli

./: LICENSE  README.md  pyproject.toml  test_data.csv
src/cleany_cli/: __init__.py  __main__.py  cleany.py  prompts.py  transforms.py
